examples/test/testpolicy14453.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14453
  namespace: namespace92
spec:
  podSelector:
    matchLabels:
      key46: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value17
          key0: value29
      podSelector:
        matchLabels:
          key17: value27
          key33: value33
          key8: value39
